support basic spawn events + clean up game.js into new classes.

--- a/prototype/conf/game/afflictions/regeneration.yaml
+++ b/prototype/conf/game/afflictions/regeneration.yaml
@@ -1,1 +1,14 @@
 ---
+name: "regeneration"
+description: "Heals over time."
+duration: 14
+interval: 1.2
+chance: 1.0
+tick:
+  jexl: |
+    amount= this.target.stats[Attribute.maxhealth] * (0.01 + state['amp']) + 35;
+
+    //log.accept('damage is ' + damage);
+    //log.accept('current health is = ' + this.target.stats[Attribute.health]);
+
+    spells.damage(this.source, this.target, amount, DamageType.heal);
