--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    compile "com.github.codingchili.chili-core:core:$project.version@jar"
+    compile "com.github.codingchili.chili-core:core:$project.version"
 }
