--- a/prototype/conf/game/afflictions/regeneration.yaml
+++ b/prototype/conf/game/afflictions/regeneration.yaml
@@ -1,17 +1,16 @@
 ---
 name: "regeneration"
 description: "Heals over time."
-duration: 14
-interval: 1.2
+duration: 16
+interval: 2
 chance: 1.0
 tick:
   jexl: |
-    if (state['amp']) {
-      state['amp'] = state['amp'] + 0.02;
+    if (state['amp'] != null) {
+      state['amp'] = state['amp'] + 0.005;
     } else {
-      state['amp'] = 0.0;
+      state['amp'] = 0.01;
     }
-
     // heal for 1pct of the targets max health.
-    amount = target.stats[Attribute.maxhealth] * (0.01 + state['amp']);
+    amount = target.stats[Attribute.maxhealth] * state['amp'];
     spells.damage(source, target, amount, DamageType.heal);
