--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'maven'
 
-project.version = "1.0.36-SNAPSHOT"
+project.version = "1.0.38RC1"
 project.group = 'com.github.codingchili.chili-game-ext'
 
 subprojects {
