Use fixed versions in bower.json because we don't support polymer 3.

--- a/prototype/conf/game/spells/regeneration.yaml
+++ b/prototype/conf/game/spells/regeneration.yaml
@@ -6,4 +6,5 @@ casttime: 2.0
 target: caster
 onCastComplete:
   jexl: |
-    spells.afflict(source, 'regeneration')
+    spells.afflict(source, 'regeneration');
+    spells.energy(source, -10);
