--- a/prototype/website/bower.json
+++ b/prototype/website/bower.json
@@ -17,38 +17,38 @@
   ],
   "dependencies": {
     "polymer": "Polymer#^2.3.1",
-    "font-roboto": "PolymerElements/font-roboto#latest",
-    "iron-ajax": "PolymerElements/iron-ajax#latest",
-    "iron-a11y-announcer": "PolymerElements/iron-a11y-announcer#latest",
-    "iron-a11y-keys-behavior": "PolymerElements/iron-a11y-keys-behavior#latest",
-    "iron-checked-element-behavior": "PolymerElements/iron-checked-element-behavior#latest",
-    "iron-behaviors": "PolymerElements/iron-behaviors#latest",
-    "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#latest",
-    "iron-collapse": "PolymerElements/iron-collapse#latest",
-    "iron-fit-behavior": "PolymerElements/iron-fit-behavior#latest",
-    "iron-icon": "PolymerElements/iron-icon#latest",
-    "iron-icons": "PolymerElements/iron-icons#latest",
-    "iron-input": "PolymerElements/iron-input#latest",
-    "iron-list": "PolymerElements/iron-list#latest",
-    "iron-menu-behavior": "PolymerElements/iron-menu-behavior#latest",
-    "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior#latest",
+    "font-roboto": "PolymerElements/font-roboto#^2.1.1",
+    "iron-ajax": "PolymerElements/iron-ajax#^2.1.3",
+    "iron-a11y-announcer": "PolymerElements/iron-a11y-announcer#^2.1.1",
+    "iron-a11y-keys-behavior": "PolymerElements/iron-a11y-keys-behavior#^2.1.1",
+    "iron-checked-element-behavior": "PolymerElements/iron-checked-element-behavior#^2.1.1",
+    "iron-behaviors": "PolymerElements/iron-behaviors#^2.1.1",
+    "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#^2.1.1",
+    "iron-collapse": "PolymerElements/iron-collapse#^2.1.1",
+    "iron-fit-behavior": "PolymerElements/iron-fit-behavior#^2.1.1",
+    "iron-icon": "PolymerElements/iron-icon#^2.1.1",
+    "iron-icons": "PolymerElements/iron-icons#^2.1.1",
+    "iron-input": "PolymerElements/iron-input#^2.1.1",
+    "iron-list": "PolymerElements/iron-list#^2.0.19",
+    "iron-menu-behavior": "PolymerElements/iron-menu-behavior#^2.1.1",
+    "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior#^2.1.1",
     "iron-pages": "PolymerElements/iron-pages#^2.1.0",
-    "iron-range-behavior": "PolymerElements/iron-range-behavior#latest",
-    "neon-animation": "PolymerElements/neon-animation#latest",
-    "paper-behaviors": "PolymerElements/paper-behaviors#latest",
-    "paper-button": "PolymerElements/paper-button#latest",
-    "paper-dialog-behavior": "PolymerElements/paper-dialog-behavior#latest",
-    "paper-dialog": "PolymerElements/paper-dialog#latest",
-    "paper-fab": "PolymerElements/paper-fab#latest",
-    "paper-header-panel": "PolymerElements/paper-header-panel#latest",
-    "paper-icon-button": "PolymerElements/paper-icon-button#latest",
-    "paper-input": "PolymerElements/paper-input#latest",
-    "paper-progress": "PolymerElements/paper-progress#latest",
-    "paper-spinner": "PolymerElements/paper-spinner#latest",
-    "paper-tabs": "PolymerElements/paper-tabs#latest",
-    "paper-toast": "PolymerElements/paper-toast#latest",
-    "paper-tooltip": "PolymerElements/paper-tooltip#latest",
-    "iron-flex-layout": "#latest",
+    "iron-range-behavior": "PolymerElements/iron-range-behavior#^2.1.1",
+    "neon-animation": "PolymerElements/neon-animation#^2.1.1",
+    "paper-behaviors": "PolymerElements/paper-behaviors#^2.1.1",
+    "paper-button": "PolymerElements/paper-button#^2.1.0",
+    "paper-dialog-behavior": "PolymerElements/paper-dialog-behavior#^2.1.1",
+    "paper-dialog": "PolymerElements/paper-dialog#^2.1.1",
+    "paper-fab": "PolymerElements/paper-fab#^2.1.0",
+    "paper-header-panel": "PolymerElements/paper-header-panel#^2.1.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.1.1",
+    "paper-input": "PolymerElements/paper-input#^2.2.1",
+    "paper-progress": "PolymerElements/paper-progress#^2.1.0",
+    "paper-spinner": "PolymerElements/paper-spinner#^2.1.0",
+    "paper-tabs": "PolymerElements/paper-tabs#^2.1.1",
+    "paper-toast": "PolymerElements/paper-toast#^2.1.0",
+    "paper-tooltip": "PolymerElements/paper-tooltip#^2.1.1",
+    "iron-flex-layout": "#^2.1.1",
     "paper-material": "PolymerElements/paper-material#^2.0.0",
     "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#^2.2.0"
   }
