--- a/prototype/conf/game/spells/regeneration.yaml
+++ b/prototype/conf/game/spells/regeneration.yaml
@@ -1,13 +1,13 @@
 ---
 id: "regeneration"
 description: "Heals over 14s for 1% of maximum health (${this.character.stats.maxhealth * 0.01}) and increasing by 0.5% per tick up to ${this.character.stats.maxhealth * (0.005 * 7 + 0.01)}."
-cooldown: 8.0
+cooldown: 4.0
 casttime: 2.0
 target: caster
 onCastBegin:
   js:
-    true;
-onCastComplete:
-  jexl: |
     spells.energy(source, -10);
+onCastComplete:
+  js: |
     spells.afflict(source, 'regeneration');
+    spells.afflict(source, 'haste');
