--- a/prototype/conf/game/afflictions/regeneration.yaml
+++ b/prototype/conf/game/afflictions/regeneration.yaml
@@ -7,9 +7,9 @@ chance: 1.0
 tick:
   jexl: |
     if (state['amp'] != null) {
-      state['amp'] = state['amp'] + 0.005;
+      state['amp'] = state['amp'] + 0.005F;
     } else {
-      state['amp'] = 0.01;
+      state['amp'] = 0.01F;
     }
     // heal for 1pct of the targets max health.
     amount = target.stats[Attribute.maxhealth] * state['amp'];
