minor adjustments for laptop devices.

--- a/prototype/conf/game/afflictions/haste.yaml
+++ b/prototype/conf/game/afflictions/haste.yaml
@@ -1,7 +1,7 @@
 ---
 name: "haste"
-duration: 60.0
-description: "Casting time and cooldowns reduced by 20%."
+duration: 20.0
+description: "Casting time and cooldowns reduced by 15%."
 modifier:
   jexl: |
-    stats[Attribute.movement] = stats[Attribute.movement] * 1.4F;
+    stats[Attribute.movement] = source.stats[Attribute.movement] * 0.15d;
