--- a/prototype/conf/game/instances/level 3.yaml
+++ b/prototype/conf/game/instances/level 3.yaml
@@ -15,3 +15,7 @@ onPlayerJoin:
       source.vector.x = spawn.x;
       source.vector.y = spawn.y;
     }
+onStartup:
+  jexl: |
+    context.npcs().spawn("Illicit Lilith");
+# how to handle the world layout? in this file?
