--- a/prototype/conf/game/instances/level 2.yaml
+++ b/prototype/conf/game/instances/level 2.yaml
@@ -16,3 +16,6 @@ onPlayerJoin:
       source.vector.x = spawn.x;
       source.vector.y = spawn.y;
     }
+onStartup:
+  jexl: |
+    context.npcs().spawn("Illicit Lilith");
