--- a/prototype/conf/realm/Angel Oak.yaml
+++ b/prototype/conf/realm/Angel Oak.yaml
@@ -15,6 +15,8 @@ availableClasses:
 - "Druid"
 - "Assassin"
 - "Hunter"
+- "Necromancer"
+- "Slayer"
 levelScaling:
   jexl: |
     source.stats[Attribute.level] * 80 + 100;
