implement movement following/targets + use deltas for all server updates

--- a/prototype/conf/game/npc/lilith.yaml
+++ b/prototype/conf/game/npc/lilith.yaml
@@ -15,4 +15,10 @@ spawn:
 death:
   jexl: "return true;"
 tick:
-  jexl: "return true;"
+  jexl: |
+    for (creature : context.creatures().all()) {
+      if (!creature.equals(source)) {
+        log.accept('following ' + creature.getName());
+        context.movement().follow(source, creature);
+      }
+    }
