deploying multiple instances of the same NPC -> must copy origin vector.

--- a/prototype/conf/game/instances/level 1.yaml
+++ b/prototype/conf/game/instances/level 1.yaml
@@ -18,4 +18,4 @@ onPlayerJoin:
     }
 onStartup:
   jexl: |
-    context.npcs().spawn("Illicit Lilith");
+    //context.npcs().spawn("Illicit Lilith");
