--- a/prototype/conf/game/instances/level 2.yaml
+++ b/prototype/conf/game/instances/level 2.yaml
@@ -7,8 +7,12 @@ limit: 50
 width: 3000
 height: 3000
 spawns:
-  - x: 300
+  - x: 375
+    y: 300
+  - x: 400
     y: 325
+  - x: 500
+    y: 225
 onPlayerJoin:
   jexl: |
     // the vector must be reset when a player leaves an instance.
@@ -18,4 +22,6 @@ onPlayerJoin:
     }
 onStartup:
   jexl: |
+    context.npcs().spawn("Illicit Lilith");
+    context.npcs().spawn("Illicit Lilith");
     context.npcs().spawn("Illicit Lilith");
