--- a/prototype/conf/game/instances/level 3.yaml
+++ b/prototype/conf/game/instances/level 3.yaml
@@ -1,8 +1,8 @@
 ---
 name: level 3
 limit: 50
-width: 3000
-height: 3000
+size: 4096
+texture: "game/map/background_grass.jpg"
 spawns:
   - x: 300
     y: 325
