show player class theme in game dialogs.

--- a/prototype/conf/game/spells/dagger.yaml
+++ b/prototype/conf/game/spells/dagger.yaml
@@ -13,7 +13,7 @@ onCastComplete:
   jexl: |
     log.accept('casting dagger completed');
 
-    damage = source.stats[Attribute.strength] * -1;
+    damage = (source.stats[Attribute.strength] * -1 / 2);
     for (creature : game.creatures().all()) {
       if (!creature.equals(source)) {
         spells.damage(source, creature, damage, DamageType.physical);
