--- a/prototype/conf/game/class/necromancer.yaml
+++ b/prototype/conf/game/class/necromancer.yaml
@@ -2,6 +2,9 @@
 name: "Necromancer"
 description: "Death and dark magics is only fit for such a tainted soul, swings two-handed swords of pure evil."
 theme: "#5108b9"
+model:
+  graphics: "game/pixitest/goblins-pro"
+  scale: 0.26
 weapons:
   - "sword2h"
 armors:
