--- a/prototype/conf/game/class/hunter.yaml
+++ b/prototype/conf/game/class/hunter.yaml
@@ -2,6 +2,9 @@
 name: "Hunter"
 description: "Knowing of their environment and the creatures lurking in it, none shall escape their true aim."
 theme: "#cf8f02"
+model:
+  graphics: "game/pixitest/goblins-pro"
+  scale: 0.26
 weapons:
   - "bow"
 armors:
