--- a/prototype/conf/game/class/paladin.yaml
+++ b/prototype/conf/game/class/paladin.yaml
@@ -2,6 +2,9 @@
 name: "Paladin"
 description: "A holy priest enforcing the law with a hammer of justice, possesses blessings of protection."
 theme: "#01bfff"
+model:
+  graphics: "game/pixitest/goblins-pro"
+  scale: 0.26
 weapons:
   - "hammer"
 armors:
