--- a/prototype/conf/game/instances/level 2.yaml
+++ b/prototype/conf/game/instances/level 2.yaml
@@ -8,22 +8,22 @@ structures:
   point:
     x: 400
     y: 400
-#- name: "Redwood"
-#  point:
-#    x: 400
-#    y: 600
-#- name: "Redwood"
-#  point:
-#    x: 800
-#    y: 500
-#- name: "Redwood"
-#  point:
-#    x: 225
-#    y: 500
-#- name: "Redwood"
-#  point:
-#    x: 40
-#    y: 600
+- name: "Redwood"
+  point:
+    x: 400
+    y: 600
+- name: "Redwood"
+  point:
+    x: 800
+    y: 500
+- name: "Redwood"
+  point:
+    x: 225
+    y: 500
+- name: "Redwood"
+  point:
+    x: 40
+    y: 600
 npcs:
 spawns:
 - x: 375
