improve error handling on bad return type from scripts. - also renamed filter -> available for dialog options for clarity.

--- a/prototype/conf/game/dialog/gargazar.yaml
+++ b/prototype/conf/game/dialog/gargazar.yaml
@@ -24,7 +24,7 @@ options:
     handler:
       jexl: |
         state['fool'] = true;
-    filter:
+    available:
       jexl: |
         if (empty(state['fool'])) {
           return true;
