--- a/prototype/conf/game/class/assassin.yaml
+++ b/prototype/conf/game/class/assassin.yaml
@@ -3,8 +3,9 @@ name: "Assassin"
 description: "Sneaking in the shadows the short blade of their dagger stabs their victims, often to death."
 theme: "#9c0977"
 model:
-  graphics: "game/pixitest/goblins-pro"
-  scale: 0.26
+  graphics: "game/pixitest/bunny/bunny"
+  skin: "pink"
+  scale: 0.16
 weapons:
   - "dagger"
 armor:
