--- a/prototype/conf/game/class/druid.yaml
+++ b/prototype/conf/game/class/druid.yaml
@@ -3,8 +3,9 @@ name: "Druid"
 description: "Restores the balance of all things nature with their staff, aids their allies with magic buffs."
 theme: "#48fd06"
 model:
-  graphics: "game/pixitest/goblins-pro"
-  scale: 0.26
+  graphics: "game/pixitest/bunny/bunny"
+  skin: "white"
+  scale: 0.16
 weapons:
   - "staff"
 armors:
