--- a/prototype/conf/game/entities/wyrmwood.yml
+++ b/prototype/conf/game/entities/wyrmwood.yml
@@ -1,19 +1,19 @@
 ---
-name: "Redwood"
-description: "Wood. Common wood."
+name: "Wyrmwood"
+description: "Godswood."
 model:
-  graphics: "game/map/tree-cyan.png"
+  graphics: "game/map/tree-redwhite.png"
   scale: 0.4
   blocking: true
   hitbox:
     type: rectangular
     points:
-      - point:
-          x: 0
-          y: 0
-      - point:
-          x: 32
-          y: 32
+    - point:
+        x: 0
+        y: 0
+    - point:
+        x: 32
+        y: 32
 stats:
   health: 200.0
 spawn:
