--- a/prototype/conf/game/entities/coal.yaml
+++ b/prototype/conf/game/entities/coal.yaml
@@ -1,9 +1,9 @@
 ---
-name: "Wyrmwood"
-description: "Godswood."
+name: "Coal"
+description: "Coal, the darkest coal."
 model:
-  graphics: "game/map/trees/redwhite.png"
-  scale: 1.0
+  graphics: "game/ores/coal.png"
+  scale: 0.3
   blocking: true
   hitbox:
     type: rectangular
