--- a/prototype/conf/game/entities/gold.yaml
+++ b/prototype/conf/game/entities/gold.yaml
@@ -1,9 +1,9 @@
 ---
-name: "Wyrmwood"
-description: "Godswood."
+name: "Gold"
+description: "Yellow and rare, it's gold."
 model:
-  graphics: "game/map/trees/redwhite.png"
-  scale: 1.0
+  graphics: "game/ores/gold.png"
+  scale: 0.3
   blocking: true
   hitbox:
     type: rectangular
