--- a/prototype/conf/game/entities/magnetite.yaml
+++ b/prototype/conf/game/entities/magnetite.yaml
@@ -1,9 +1,9 @@
 ---
-name: "Wyrmwood"
-description: "Godswood."
+name: "Magnetite"
+description: "Mysterious magnetite."
 model:
-  graphics: "game/map/trees/redwhite.png"
-  scale: 1.0
+  graphics: "game/ores/magnetite.png"
+  scale: 0.3
   blocking: true
   hitbox:
     type: rectangular
