--- a/prototype/conf/game/entities/marble.yaml
+++ b/prototype/conf/game/entities/marble.yaml
@@ -1,9 +1,9 @@
 ---
-name: "Wyrmwood"
-description: "Godswood."
+name: "Marble"
+description: "White marble stone."
 model:
-  graphics: "game/map/trees/redwhite.png"
-  scale: 1.0
+  graphics: "game/ores/marble.png"
+  scale: 0.3
   blocking: true
   hitbox:
     type: rectangular
