--- a/prototype/conf/game/entities/quartz.yaml
+++ b/prototype/conf/game/entities/quartz.yaml
@@ -1,9 +1,9 @@
 ---
-name: "Wyrmwood"
-description: "Godswood."
+name: "Quartz."
+description: "Common quartz."
 model:
-  graphics: "game/map/trees/redwhite.png"
-  scale: 1.0
+  graphics: "game/ores/quartz.png"
+  scale: 0.3
   blocking: true
   hitbox:
     type: rectangular
