--- a/prototype/conf/game/entities/rubies.yaml
+++ b/prototype/conf/game/entities/rubies.yaml
@@ -1,9 +1,9 @@
 ---
-name: "Wyrmwood"
-description: "Godswood."
+name: "Rubies."
+description: "Rare and valuable rubies."
 model:
-  graphics: "game/map/trees/redwhite.png"
-  scale: 1.0
+  graphics: "game/ores/rubies.png"
+  scale: 0.3
   blocking: true
   hitbox:
     type: rectangular
