--- a/prototype/conf/game/entities/sulphur.yaml
+++ b/prototype/conf/game/entities/sulphur.yaml
@@ -1,9 +1,9 @@
 ---
-name: "Wyrmwood"
-description: "Godswood."
+name: "Sulphur"
+description: "Flammable sulphur."
 model:
-  graphics: "game/map/trees/redwhite.png"
-  scale: 1.0
+  graphics: "game/ores/sulphur.png"
+  scale: 0.3
   blocking: true
   hitbox:
     type: rectangular
