--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.daemon=true
 org.gradle.parallel=true
-org.gradle.jvmargs=-Xmx2048M
+org.gradle.jvmargs=-Xmx1024M
+org.gradle.configureondemand=true
