--- a/services/realm/build.gradle
+++ b/services/realm/build.gradle
@@ -2,4 +2,5 @@ project.group = 'com.codingchili.service'
 
 dependencies {
     compile 'org.codehaus.groovy:groovy-jsr223:3.0.0-alpha-3'
+    compile project(':common')
 }
